--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <input type="text" id="name" placeholder="Enter your full name">
         <input type="email" id="email" placeholder="Enter your email">
 
-        <p><strong>Step 3:</strong> Submit your username by clicking the button below:</p>
+        <p><strong>Step 4:</strong> Submit by clicking the button below:</p>
         
         <button class="submit-btn" onclick="submitDetails()">Submit</button>
 
