--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
             .then(response => response.json())
             .then(data => {
                 if (data.status === "success") {
-                    alert('Data submitted successfully!');
+                    alert(data.message);
                 } else {
-                    alert('Submission failed');
+                    alert(data.message);
                 }
             })
             .catch((error) => {
                 console.error('Error:', error);
-                alert('Failed to submit data. Please try again.');
+                alert('Network error or unable to reach server.');
             });
         
             return false;
