--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             const email = document.getElementById('email').value;
             const username = document.getElementById('username').value;
     
-            fetch('https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbzkU1U46GKlRZnsartiGj26PHxOD7TScjEQsklxf0tuTcy_juxi0sVnsbc4kEOedDYVNw/exec', {
+            fetch('https://script.google.com/macros/s/AKfycbzkU1U46GKlRZnsartiGj26PHxOD7TScjEQsklxf0tuTcy_juxi0sVnsbc4kEOedDYVNw/exec', {
                 redirect: "follow",
                 method: 'POST',
                 mode: 'cors',
